# WebUntis

./: Cargo.toml
src/: api.rs  diff.rs  discord.rs  extract.rs  json_util.rs  lib.rs  logging.rs  main.rs  untis.rs  validate.rs
src/api/: entries.rs  login.rs
src/api/entries/: row.rs
src/discord/: embed.rs
src/discord/embed/: color.rs  field.rs
src/untis/: entries.rs  login.rs
src/untis/entries/: row.rs
