[package]
name = "webuntis"
version = "0.1.0"
authors = ["BioTomateDE <latuskati+cratesio@gmail.com>"]
edition = "2024"
#rust-version = "insert msrv later"
description = "Access to the internal Untis API for students"
readme = "./README.md"
repository = "https://github.com/BioTomateDE/WebUntis"
license = "GPL-3.0-or-later"
keywords = ["untis", "webuntis", "timetable", "student"]
categories = ["api-bindings"]
publish = false

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }

[dependencies.anyhow]
version = "1.0.100"
default-features = false

[dependencies.chrono]
version = "0.4.43"
default-features = false
features = ["now", "serde"]

[dependencies.chrono-tz]
version = "0.10.4"
default-features = false
features = ["case-insensitive", "std"]

[dependencies.reqwest]
version = "0.13.1"
default-features = false
features = ["blocking", "cookies", "form", "json", "query", "rustls"]

[dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0.149"
default-features = false
features = ["std"]
